# Telegram-CLI

./: .gitignore  CMakeLists.txt  README.md  install.sh
.github/: copilot-instructions.md
scripts/: build_tdlib.sh  install_deps.sh
src/: main.cpp
src/app/: App.cpp  App.hpp  Config.cpp  Config.hpp  ExteraGram.cpp  ExteraGram.hpp  State.hpp  exteraGram.cpp  exteraGram.hpp
src/telegram/: Auth.cpp  Auth.hpp  Client.cpp  Client.hpp  Gifts.cpp  Gifts.hpp  Messages.cpp  Messages.hpp  Stars.cpp  Stars.hpp
src/ui/: AuthScreen.cpp  AuthScreen.hpp  ChatList.cpp  ChatList.hpp  ChatView.cpp  ChatView.hpp  CommandsPanel.cpp  CommandsPanel.hpp  GiftsPanel.cpp  GiftsPanel.hpp  InfoPanel.cpp  InfoPanel.hpp  InputBar.cpp  InputBar.hpp  StarsPanel.cpp  StarsPanel.hpp  StatusBar.cpp  StatusBar.hpp
